Update 8.2 - Identify and apply security controls in software development ecosystems.md

--- a/DOMAIN8: Software Development Security/8.2 - Identify and apply security controls in software development ecosystems.md
+++ b/DOMAIN8: Software Development Security/8.2 - Identify and apply security controls in software development ecosystems.md
@@ -300,3 +300,103 @@ SCM also supports **security testing**. When integrated properly, SCM allows you
 <details> <summary>Show answer</summary> A compromised SCM platform can allow attackers to inject malicious code or configuration changes into trusted software releases, undermining the entire supply chain, as seen in incidents like SolarWinds. Mitigation controls include strong access controls, multifactor authentication, role-based permissions, and audit logging to secure SCM systems and maintain the integrity of software delivery. </details>
 
 ---
+
+
+## 8.2.8 Code repositories ##
+
+Imagine you're leading a team of developers building a new application, and every day dozens of files are being edited, deleted, or rewritten. Now multiply that by hundreds of projects and tens of developers. How do you keep track of what changed, who changed it, and why? That’s where code repositories come into play. But in the world of cybersecurity, it’s not enough to know that code repositories store code. You need to understand how they form the backbone of secure software development practices, how they relate to integrity and accountability, and how, when misconfigured or exposed, they can become a vector for attack.
+
+Think of a code repository like the black box of a plane, or the logbook of a ship. It’s where every important change is recorded, where the current state of the system is always documented, and where we can investigate when something goes wrong. In technical terms, it’s a version-controlled environment—typically using tools like Git, Mercurial, or Subversion—that tracks the evolution of software code over time. The key word here is “version-controlled.” Without **version control**, collaboration becomes chaotic, reversions are nearly impossible, and malicious or accidental changes could go unnoticed.
+
+In a secure SDLC, code repositories are not just convenience tools. They are essential for enforcing traceability and auditability. Let’s say a developer introduces a backdoor or a vulnerability. If commits are properly signed and reviewed, we can trace the change to a specific user at a specific time. But if access controls are lax or if we don’t require identity verification on commits, that same repository becomes a liability. In fact, many breaches have originated from exposed repositories—think of companies accidentally publishing API keys or AWS credentials in public GitHub repos. It happens more often than you think. And once that information is out, attackers can automate their scans and exploit what they find in minutes. This is why part of software security hygiene involves automated scans of repositories to catch secrets or vulnerabilities before the code ever reaches production.
+
+Now picture this: you’re reviewing your team’s GitLab instance. Who has access to what? Are branches protected? Are merge requests subject to code review by at least two peers? These operational decisions aren’t just process—they are part of your security architecture. Role-based access control in code repositories means junior developers can contribute without the ability to push directly to main branches. This prevents unauthorized or unreviewed code from reaching production. That’s not bureaucracy—that’s proactive risk management. In many organizations, especially those working under regulatory frameworks like PCI-DSS or HIPAA, this level of control is mandatory.
+
+:necktie: An unregulated pipeline could mean a violation of compliance, leading not only to security breaches but also to legal consequences.
+
+Let’s go deeper into the concept of immutability. When commits are pushed to the repository, they should be permanent and tamper-evident. Git does this naturally using SHA-1 hashes, so that any alteration to history is immediately noticeable. But don’t let that give you a false sense of security. With enough privileges, history can be rewritten. That’s why you should configure your repositories to disallow force-pushes on main branches. Think of it like protecting a ledger from being edited after entries are written. This ties directly to the principle of integrity: ensuring that data is accurate and unaltered from its authorized state. If your repository allows tampering, your SDLC lacks integrity.
+
+### Open Questions ###
+
+1. Why are code repositories considered a critical component in a secure software development lifecycle (SDLC)?
+
+<details> <summary>Show answer</summary> Code repositories are critical in a secure SDLC because they serve as the central source of truth for all code changes, supporting version control, collaboration, traceability, and enforcement of security policies. A compromised repository can poison the entire CI/CD pipeline, leading to potential breaches in production systems. </details>
+
+2. How can poor access control in a code repository lead to serious security incidents?
+
+<details> <summary>Show answer</summary> Poor access control can allow unauthorized users to push malicious code, bypass code review, or alter commit history. This undermines the integrity of the application and could result in vulnerabilities being introduced without detection, potentially causing data breaches or service disruption. </details>
+
+3. What role does commit signing play in maintaining the integrity of a code repository?
+
+<details> <summary>Show answer</summary> Commit signing helps maintain repository integrity by verifying that each code change was made by an authenticated and authorized contributor. It creates a cryptographic link between the developer and their code, making unauthorized changes more difficult to conceal. </details>
+
+4. How do code repositories support traceability and accountability in case of a security incident?
+
+<details> <summary>Show answer</summary> Repositories log every change, including who made it and when, providing an audit trail that can be crucial for forensic analysis during incident response. This supports accountability and helps identify the root cause and timeline of a breach or security failure. </details>
+
+5. What are some best practices for securing a code repository against unauthorized access and tampering?
+
+<details> <summary>Show answer</summary> Best practices include enforcing role-based access control, requiring multi-factor authentication (MFA), enabling branch protections (e.g., no force-push to main), mandating code reviews and signed commits, and integrating automated secret scanners to detect accidental credential leaks. </details>
+
+---
+
+## 8.2.9 Application security testing (e.g., static application security testing (SAST), dynamic application security testing (DAST), software composition analysis, Interactive Application Security Test (IAST)) ##
+
+Most modern applications are delivered to production with known vulnerabilities baked into their code, their libraries, or their configurations. It’s not just a matter of careless developers or bad intentions—software today is built fast, collaboratively, and with dependencies so deep you often don’t even know who wrote half your codebase. That's why application security testing is no longer optional; it’s essential, integrated, and strategic.
+
+Let’s begin with Static **Application Security Testing, or SAST**. Think of SAST like an X-ray of your code—performed early, while the patient (the application) is still on the operating table. You don’t need to run the application; instead, SAST tools inspect the source code, bytecode, or binary for security flaws like hardcoded credentials, input validation issues, or misused cryptographic functions. One way I like to explain SAST is like reading a book to look for plot holes before it goes to print—you’re reviewing the logic line-by-line before the story is told to users. 
+SAST is “white-box” testing because you see everything inside. 
+SAST is great at catching security issues early—left-shifting security, as we say in DevSecOps circles. But SAST can generate a lot of noise. False positives are common because it’s trying to understand intent just by looking at static code. It can’t see runtime context—so it might flag things that wouldn’t ever be executed. This is where your judgment matters. The exam may ask you about the advantages of early detection and how SAST integrates into development pipelines. In the real world, you’ll be expected to recommend ways to reduce friction—like teaching developers how to write code that SAST tools understand better or configuring rule sets to match your organization’s risk profile.
+
+**Dynamic Application Security Testing, or DAST** is “black-box” testing. It doesn’t need to know your code; it just cares about behavior. The value of DAST lies in realism. You test the app as it behaves in a deployed environment, simulating the perspective of an external attacker. This is incredibly useful, especially for finding authentication flaws, session management issues, or configuration leaks. But DAST has its limits too. It usually can’t test logic flaws, or anything that depends on understanding internal state. For example, DAST might tell you that your login page is slow, or that it's vulnerable to brute force—but it won’t tell you that a poorly written function allows users to access other users’ data after login. 
+
+Then we have something that’s relatively newer but increasingly critical: **Software Composition Analysis, or SCA**. Here’s the story: most applications today are not 100% written by your devs. In fact, sometimes 70% or more of your codebase comes from open-source components, third-party libraries, and frameworks. SCA checks all the external components in your software stack and flags known vulnerabilities, license violations, and even outdated versions. It queries massive vulnerability databases like the NVD (National Vulnerability Database) and commercial repositories to see if any of your dependencies have known CVEs. SCA tells you what risks you’ve inherited, not just what you’ve created. Imagine shipping an app that depends on Log4j, during the height of the Log4Shell crisis—if you didn’t have SCA in place, you’d never know you were exposed. This is where good security governance comes in. SCA should be part of your CI/CD pipeline, flagging high-severity vulnerabilities before release. More importantly, it should inform your patching and upgrade policies across development teams. 
+:necktie: Real-world breaches happen more due to known but unpatched flaws than exotic zero-days.
+
+And then we arrive at **Interactive Application Security Testing, or IAST**. IAST combines elements of SAST and DAST. It instruments the code at runtime (typically via agents) to observe the internal workings as the app is being exercised—often during QA or automated tests. This means it has both the runtime awareness of DAST and the code-level insight of SAST. For example, IAST can see that user input from a form flows through several layers of logic, gets sanitized in one function, but then is improperly re-used later. It understands the full data flow, across trust boundaries. This contextual awareness reduces false positives, which is a major win. However, IAST is still evolving. It requires a controlled test environment and it’s harder to deploy in very complex or legacy systems. But when done right, it can give developers immediate, in-context feedback while testing their features. That feedback loop—quick, relevant, specific—is what makes IAST such a game-changer for secure DevOps.
+
+:brain: Think of your application like a bank vault. SAST is your blueprint review—it checks whether the vault was built with strong walls and no cracks in the concrete. DAST is a simulated robbery—you test if a burglar can break in by rattling the doorknobs and probing for weaknesses. SCA is a material inspection—you check whether the vault door was built with certified steel or some weak counterfeit. IAST is like placing motion detectors and microphones inside the vault during a routine test—you get a live feed of how the vault behaves when customers come and go, and where it might falter.
+
+The following table that summarizes key characteristics of each testing method:
+
+| Testing Type | Visibility                | Execution required? | Strengths                                      | Weaknesses                                   |
+|---------------|---------------------------|---------------------|------------------------------------------------|----------------------------------------------|
+| **SAST**      | Code-level (white-box)    | NO                  | Early detection, deep logic inspection         | High false positives, no runtime context     |
+| **DAST**      | Runtime (black-box)       | YES                 | Realistic external attacker view               | Limited internal insight, may miss logic flaws |
+| **SCA**       | Dependencies metadata     | NO                  | Identifies inherited risks, open-source scanning | Doesn’t find custom code issues             |
+| **IAST**      | Hybrid (code + runtime)   | YES (during execution) | Real-time insights, fewer false positives     | Needs environment setup, less mature tools  |
+
+### Open Questions ###
+
+How could you describe the key difference between Static Application Security Testing (SAST) and Dynamic Application Security Testing (DAST)?
+
+<details> <summary>Show answer</summary> SAST analyzes the source code or binaries without executing the application, providing deep visibility into logic flaws and insecure coding practices before deployment. In contrast, DAST tests the application in a running state by interacting with it externally, simulating the behavior of a black-box attacker to find runtime vulnerabilities. </details>
+
+A development team wants to detect known vulnerabilities in third-party libraries used in their application. Which security testing method is MOST appropriate?
+
+<details> <summary>Show answer</summary> Software Composition Analysis (SCA) is the most appropriate method because it scans dependencies and third-party components for known vulnerabilities and licensing issues using public and commercial vulnerability databases. </details>
+
+Why might a security team prefer using Interactive Application Security Testing (IAST) over traditional SAST and DAST methods?
+
+<details> <summary>Show answer</summary> IAST combines the strengths of SAST and DAST by analyzing the application’s internal state during runtime. It provides real-time, contextual feedback with fewer false positives and greater insight into data flow, helping teams pinpoint and fix vulnerabilities more efficiently during active testing. </details>
+
+What is a limitation of Dynamic Application Security Testing (DAST)?
+
+<details> <summary>Show answer</summary> DAST may miss business logic vulnerabilities and cannot inspect the internal code structure, as it treats the application as a black box. This makes it less effective for identifying deep or context-dependent flaws compared to white-box methods like SAST. </details>
+
+From a risk management perspective, why is it critical to integrate Software Composition Analysis (SCA) into the CI/CD pipeline?
+
+<details> <summary>Show answer</summary> Because modern applications heavily rely on third-party and open-source components, integrating SCA into the CI/CD pipeline ensures that known vulnerabilities are detected early and remediated before production. This reduces inherited risk and helps maintain the overall integrity and security of the software supply chain. </details>
+
+---
+
+
+
+
+
+
+
+
+
+
+
