Update 8.3 - Assess the effectiveness of software security.md

--- a/DOMAIN8: Software Development Security/8.3 - Assess the effectiveness of software security.md
+++ b/DOMAIN8: Software Development Security/8.3 - Assess the effectiveness of software security.md
@@ -66,6 +66,48 @@ No software is risk-free. Every piece of software, no matter how secure it appea
 
 Whether you follow qualitative, quantitative, or hybrid risk analysis methods, the goal is to convert vague concerns into actionable insights. You begin by identifying the assets involved — customer data, credentials, financial records. Then you look at threats — unauthorized access, data leakage, privilege escalation. Next, you examine vulnerabilities — weak input validation, missing rate-limiting, hardcoded credentials. Finally, you assess the potential impact if those vulnerabilities are exploited, and the likelihood of that happening based on exposure and attacker motivation.
 
-:link: Review also  
+:link: Review also  [1.9 Understand and apply risk management concepts](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#19-understand-and-apply-risk-management-concepts)
 
+But it’s not enough to list risks. We need to **prioritize** them. Time, budget, and developer attention are all limited. So if you try to mitigate everything equally, you’ll either burn out your team or slow down the project unnecessarily. That’s where tools like the risk matrix, DREAD scoring, or FAIR methodology help. For example, a low-likelihood vulnerability that could lead to total data loss is more urgent than a high-likelihood vulnerability that only causes a cosmetic error. We must be able to communicate that prioritization clearly to developers, stakeholders, and management. We are the translator between technical complexity and business decisions.
 
+Then comes **mitigation**. That’s where the real impact of your work is felt. Risk mitigation in software security can take many forms — from patching a vulnerable library to rewriting a poorly designed module, from implementing strong authentication to simply deciding to deprecate a dangerous feature. Each mitigation comes with its own cost-benefit tradeoff. Let’s say you discover a vulnerability in a legacy backend service that handles 2% of customer traffic. Fixing it would require rewriting 5,000 lines of code. You assess that the risk is moderate, but the mitigation cost is very high. Do you fix it now, later, or never? That’s where your judgment, grounded in structured risk analysis, guides the decision. Perhaps you isolate the service, add compensating controls like monitoring and rate-limiting, and plan to sunset it in the next release cycle. 
+
+And don’t forget the human side. Developers are your partners in risk mitigation. If you come to them with vague fears or unverified threats, you lose credibility. But if you show them risk data — logs, threat models, exploit proof-of-concepts, real-world breach examples — they’ll be more willing to act. For example, if a third-party package has known vulnerabilities and a proof-of-concept exploit exists in the wild, that’s a clear, actionable risk. But if the only issue is a theoretical timing attack in a niche use case, the urgency is lower. 
+
+:necktie: Risk is never eliminated, only managed. Even after mitigation, residual risk remains.
+
+Sometimes, the decision is to accept the risk — especially when the cost of fixing it outweighs the business benefit. But it must be an informed decision, made with eyes open and documented thoroughly. 
+
+### Open Questions ###
+
+1. Why is risk analysis essential in determining whether software security controls are effective?
+<details>
+  <summary>Show answer</summary>
+Because risk analysis provides structured insight into which vulnerabilities matter most by evaluating the likelihood and impact of potential threats, allowing teams to focus on the most significant risks rather than wasting resources on low-priority issues.
+</details>
+
+2. During risk assessment of a legacy system, the team finds a vulnerability with low likelihood but high potential impact. What should be the next step?
+<details>
+  <summary>Show answer</summary>
+The next step is to evaluate cost-effective mitigation strategies, such as applying compensating controls or isolating the vulnerable component, while documenting the residual risk for potential acceptance if mitigation is not feasible immediately.
+</details>
+
+3. How does effective risk mitigation influence software development decisions in resource-constrained environments?
+<details>
+  <summary>Show answer</summary>
+In environments with limited time and resources, risk mitigation helps prioritize fixes by focusing on the most dangerous vulnerabilities, ensuring that security efforts are aligned with actual threats and business objectives rather than treating all issues equally.
+</details>
+
+4. What is the difference between accepting a risk and mitigating it, and when might accepting a risk be a valid decision?
+<details>
+  <summary>Show answer</summary>
+Accepting a risk means consciously deciding not to act on it, typically when the cost of mitigation outweighs the potential impact; it becomes valid when documented, approved at the right level, and residual risk is well understood and monitored.
+</details>
+
+5. How can a CISSP ensure that risk analysis findings are taken seriously by development and business teams?
+<details>
+  <summary>Show answer</summary>
+By presenting risk findings with supporting data (e.g., threat modeling, business impact estimates, known exploits), translating technical language into business outcomes, and showing how mitigation aligns with both security goals and business continuity.
+</details>
+
+---
